update to the code

--- a/main_cortical_parcellation.ipynb
+++ b/main_cortical_parcellation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -22,14 +22,25 @@
      ]
     },
     {
-     "ename": "ImportError",
-     "evalue": "No module named dfsio",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-72d70afb8f95>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \"\"\"\n\u001b[0;32m      6\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu'reset'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdfsio\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mreaddfs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mwritedfs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: No module named dfsio"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:traits.has_traits:DEPRECATED: traits.has_traits.wrapped_class, 'the 'implements' class advisor has been deprecated. Use the 'provides' class decorator.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100307.reduce3.LR_mask.mat\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ajoshi\\Miniconda2\\lib\\site-packages\\numpy\\lib\\function_base.py:1957: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return c / sqrt(multiply.outer(d, d))\n"
      ]
     }
    ],
@@ -44,7 +55,6 @@
     "import scipy.io\n",
     "import numpy as np\n",
     "import csv\n",
-    "from multivariate.hotelling import hotelling_t2\n",
     "from dfsio import readdfs,writedfs\n",
     "from mayavi import mlab\n",
     "import h5py\n",
@@ -86,6 +96,71 @@
     "rho = np.corrcoef(d, d_corr);\n",
     "rho[~np.isfinite(rho)] = 0;\n",
     "rho_rho = np.corrcoef(rho.T);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rho_rho[~np.isfinite(rho_rho)]=1e16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#from skimage import data, io, segmentation, color\n",
+    "#from skimage.future import graph\n",
+    "from sklearn.cluster import SpectralClustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "SC=SpectralClustering(affinity='precomputed')\n",
+    "labs=SC.fit_predict(rho_rho)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'labs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-2e42cc8c449c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdfs_left_sm\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattributes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlabs\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m mesh = mlab.triangular_mesh(r.vertices[:,0], r.vertices[:,1], r.vertices[:,2], r.faces, representation='surface', \n\u001b[0;32m      3\u001b[0m                             opacity=1,scalars=r.attributes)\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#mlab.pipeline.surface(mesh)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'labs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "r=dfs_left_sm,r.attributes=labs;\n",
+    "mesh = mlab.triangular_mesh(r.vertices[:,0], r.vertices[:,1], r.vertices[:,2], r.faces, representation='surface', \n",
+    "                            opacity=1,scalars=r.attributes)\n",
+    "#mlab.pipeline.surface(mesh)\n",
+    "\n",
+    "mlab.gcf().scene.parallel_projection = True\n",
+    "mlab.view(azimuth=0, elevation=-90)\n"
    ]
   },
   {
