--- a/main_cortical_parcellation.ipynb
+++ b/main_cortical_parcellation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -18,29 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:traits.has_traits:DEPRECATED: traits.has_traits.wrapped_class, 'the 'implements' class advisor has been deprecated. Use the 'provides' class decorator.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
       "100307.reduce3.LR_mask.mat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ajoshi\\Miniconda2\\lib\\site-packages\\numpy\\lib\\function_base.py:1957: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return c / sqrt(multiply.outer(d, d))\n"
      ]
     }
    ],
@@ -88,30 +67,65 @@
     "d = d - m[:,None]#(:, np.ones((1, size(d, 2)]);\n",
     "s = np.std(d, 1);\n",
     "d = d/s[:,None]\n",
-    "g_mask = np.any(~np.isfinite(d),1);\n",
-    "d[g_mask, :] = 0;\n",
+    "#g_mask = np.any(~np.isfinite(d),1);\n",
+    "#d[g_mask, :] = 0;\n",
     "\n",
     "\n",
     "#% compute correlation matrix\n",
     "rho = np.corrcoef(d, d_corr);\n",
+    "rho=rho[range(d.shape[0]),d.shape[0]+1:]\n",
     "rho[~np.isfinite(rho)] = 0;\n",
-    "rho_rho = np.corrcoef(rho.T);"
+    "rho_rho = np.corrcoef(rho);\n",
+    " \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(753L, 753L)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rho_rho[~np.isfinite(rho_rho)]=1e16"
+    "rho_rho.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99761657260138825"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho_rho[0,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -124,43 +138,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "SC=SpectralClustering(affinity='precomputed')\n",
-    "labs=SC.fit_predict(rho_rho)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for nclusters in [2, 5, 10, 30]:\n",
+    "    SC=SpectralClustering(n_clusters=nclusters,affinity='precomputed')\n",
+    "    labs=SC.fit_predict(rho_rho)\n",
+    "\n",
+    "    r=dfs_left_sm;r.labels=r.labels*0;r.labels[msk_small_region]=labs+1;\n",
+    "    mesh = mlab.triangular_mesh(r.vertices[:,0], r.vertices[:,1], r.vertices[:,2], r.faces, representation='surface', \n",
+    "                            opacity=1,scalars=np.float64(r.labels))\n",
+    "    #mlab.pipeline.surface(mesh)\n",
+    "\n",
+    "    mlab.gcf().scene.parallel_projection = True\n",
+    "    mlab.view(azimuth=0, elevation=-90)\n",
+    "    mlab.savefig(filename = str(nclusters)+'labels1.png')\n",
+    "    mlab.view(azimuth=0, elevation=90)\n",
+    "    mlab.savefig(filename = str(nclusters)+'labels2.png')\n",
+    "    mlab.close();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'labs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-2e42cc8c449c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdfs_left_sm\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mattributes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlabs\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m mesh = mlab.triangular_mesh(r.vertices[:,0], r.vertices[:,1], r.vertices[:,2], r.faces, representation='surface', \n\u001b[0;32m      3\u001b[0m                             opacity=1,scalars=r.attributes)\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#mlab.pipeline.surface(mesh)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'labs' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'5'"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "r=dfs_left_sm,r.attributes=labs;\n",
-    "mesh = mlab.triangular_mesh(r.vertices[:,0], r.vertices[:,1], r.vertices[:,2], r.faces, representation='surface', \n",
-    "                            opacity=1,scalars=r.attributes)\n",
-    "#mlab.pipeline.surface(mesh)\n",
-    "\n",
-    "mlab.gcf().scene.parallel_projection = True\n",
-    "mlab.view(azimuth=0, elevation=-90)\n"
+    "str(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(labs)"
    ]
   },
   {
