--- a/main_cortical_parcellation.ipynb
+++ b/main_cortical_parcellation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,8 +18,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Vendor:  Continuum Analytics, Inc.\n",
+      "Package: mkl\n",
+      "Message: trial mode expires in 28 days\n",
+      "WARNING:traits.has_traits:DEPRECATED: traits.has_traits.wrapped_class, 'the 'implements' class advisor has been deprecated. Use the 'provides' class decorator.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "100307.reduce3.LR_mask.mat\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ajoshi\\Miniconda2\\lib\\site-packages\\numpy\\lib\\function_base.py:1957: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return c / sqrt(multiply.outer(d, d))\n"
      ]
     }
    ],
@@ -81,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +116,7 @@
        "(753L, 753L)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +138,7 @@
        "0.99761657260138825"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -149,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for nclusters in [2, 5, 10, 30]:\n",
-    "    SC=SpectralClustering(n_clusters=nclusters,affinity='precomputed')\n",
+    "for nclusters in [2, 5, 10, 30,200]:\n",
+    "    SC=SpectralClustering(n_clusters=nclusters,affinity='precomputed',assign_labels='discretize',eigen_solver='arpack')\n",
     "    labs=SC.fit_predict(rho_rho)\n",
     "\n",
     "    r=dfs_left_sm;r.labels=r.labels*0;r.labels[msk_small_region]=labs+1;\n",
@@ -174,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +209,7 @@
        "'5'"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +231,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
