updated the file

--- a/main_cortical_parcellation.ipynb
+++ b/main_cortical_parcellation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -18,32 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Vendor:  Continuum Analytics, Inc.\n",
-      "Package: mkl\n",
-      "Message: trial mode expires in 28 days\n",
-      "WARNING:traits.has_traits:DEPRECATED: traits.has_traits.wrapped_class, 'the 'implements' class advisor has been deprecated. Use the 'provides' class decorator.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
       "100307.reduce3.LR_mask.mat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ajoshi\\Miniconda2\\lib\\site-packages\\numpy\\lib\\function_base.py:1957: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return c / sqrt(multiply.outer(d, d))\n"
      ]
     }
    ],
@@ -75,6 +51,7 @@
     "\n",
     "dfs_left = readdfs(os.path.join(p_dir, 'reference', sub + '.aparc.a2009s.32k_fs.reduce3.left.dfs'));\n",
     "dfs_left_sm = readdfs(os.path.join(p_dir, 'reference', sub + '.aparc.a2009s.32k_fs.reduce3.very_smooth.left.dfs'));\n",
+    "\n",
     "LR_flag=msk['LR_flag']\n",
     "LR_flag=np.squeeze(LR_flag)>0\n",
     "data=data['ftdata_NLM']\n",
@@ -104,12 +81,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from dfsio import readdfs,writedfs\n",
+    "import networkx as nx\n",
+    "g = nx.Graph()\n",
+    "p_dir = 'C:\\\\Users\\\\ajoshi\\\\Downloads\\\\HCP-fMRI-NLM';\n",
+    "sub = '100307';\n",
+    "s = readdfs(os.path.join(p_dir, 'reference', sub + '.aparc.a2009s.32k_fs.reduce3.very_smooth.left.dfs'));\n",
+    "g.add_edges_from(s.faces[:,(0,1)]);g.add_edges_from(s.faces[:,(1,2)]);g.add_edges_from(s.faces[:,(2,0)]);\n",
+    "Adj=nx.adjacency_matrix(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.matrixlib.defmatrix.matrix"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AdjS=Adj[(msk_small_region),:];AdjS=AdjS[:,(msk_small_region)]\n",
+    "AdjS=AdjS.todense()\n",
+    "#AdjS=np.matrix(AdjS)\n",
+    "np.fill_diagonal(AdjS,1)\n",
+    "#AdjS.shape\n",
+    "AdjS=1.0*((AdjS*AdjS*AdjS)>0)\n",
+    "rho_rho=np.multiply(AdjS,rho_rho)\n",
+    "np.sum(AdjS,1)\n",
+    "type(AdjS)"
+   ]
   },
   {
    "cell_type": "code",
@@ -122,7 +139,7 @@
     "from sklearn.covariance import GraphLassoCV\n",
     "dd=np.concatenate((d,d_corr),0)\n",
     "model = GraphLassoCV(mode='lars')\n",
-    "model.fit(dd)\n",
+    "model.fit(dd) \n",
     "rho2 = model.covariance_\n",
     "rho2=rho2[range(d.shape[0]),d.shape[0]+1:]\n",
     "rho2[~np.isfinite(rho2)] = 0;\n",
@@ -159,29 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.99761657260138825"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rho_rho[0,2]"
+    "np.fill_diagonal(rho_rho,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -194,25 +200,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 1.,  1.,  1., ...,  0.,  0.,  0.],\n",
+       "        [ 1.,  1.,  1., ...,  0.,  0.,  0.],\n",
+       "        [ 1.,  1.,  1., ...,  0.,  0.,  0.],\n",
+       "        ..., \n",
+       "        [ 0.,  0.,  0., ...,  1.,  1.,  1.],\n",
+       "        [ 0.,  0.,  0., ...,  1.,  1.,  1.],\n",
+       "        [ 0.,  0.,  0., ...,  1.,  1.,  1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "AdjS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "for nclusters in [2, 5, 10, 30,200]:\n",
-    "    SC=SpectralClustering(n_clusters=nclusters,affinity='precomputed',assign_labels='discretize',eigen_solver='arpack')\n",
+    "    SC=SpectralClustering(n_clusters=nclusters,affinity='precomputed')\n",
     "    labs=SC.fit_predict(rho_rho)\n",
     "\n",
     "    r=dfs_left_sm;r.labels=r.labels*0;r.labels[msk_small_region]=labs+1;\n",
