updates to the clustering code.

--- a/main_cortical_parcellation.ipynb
+++ b/main_cortical_parcellation.ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
-      "100307.reduce3.LR_mask.mat\n"
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
      ]
     }
    ],
@@ -36,8 +35,8 @@
     "from mayavi import mlab\n",
     "import h5py\n",
     "import os\n",
-    "p_dir = 'C:\\\\Users\\\\ajoshi\\\\Downloads\\\\HCP-fMRI-NLM';\n",
-    "sub = '100307';\n",
+    "p_dir = 'E:\\\\HCP-fMRI-NLM';\n",
+    "sub = '499566';\n",
     "r_factor = 3;\n",
     "ref_dir = os.path.join(p_dir, 'reference');\n",
     "ref = '100307';\n",
@@ -47,8 +46,8 @@
     "msk = scipy.io.loadmat(fname1) #h5py.File(fname1);\n",
     "data = scipy.io.loadmat(os.path.join(p_dir, sub, sub + '.rfMRI_REST1_RL.reduce3.ftdata.NLM_11N_hvar_25.mat'));\n",
     "\n",
-    "dfs_left = readdfs(os.path.join(p_dir, 'reference', sub + '.aparc.a2009s.32k_fs.reduce3.left.dfs'));\n",
-    "dfs_left_sm = readdfs(os.path.join(p_dir, 'reference', sub + '.aparc.a2009s.32k_fs.reduce3.very_smooth.left.dfs'));\n",
+    "dfs_left = readdfs(os.path.join(p_dir, 'reference', ref + '.aparc.a2009s.32k_fs.reduce3.left.dfs'));\n",
+    "dfs_left_sm = readdfs(os.path.join(p_dir, 'reference', ref + '.aparc.a2009s.32k_fs.reduce3.very_smooth.left.dfs'));\n",
     "\n",
     "LR_flag=msk['LR_flag']\n",
     "LR_flag=np.squeeze(LR_flag)>0\n",
@@ -57,7 +56,7 @@
     "\n",
     "msk_small_region = (dfs_left.labels==46) | (dfs_left.labels==28) | (dfs_left.labels==29) #% motor\n",
     "\n",
-    "#temp = data.ftdata_NLM;%(msk.LR_flag, :);\n",
+    "#temp = data.ftdata_NLM;#%(msk.LR_flag, :);\n",
     "d = temp[msk_small_region , :];\n",
     "d_corr = temp[~msk_small_region , :];\n",
     "\n",
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +86,7 @@
     "from dfsio import readdfs,writedfs\n",
     "import networkx as nx\n",
     "g = nx.Graph()\n",
-    "p_dir = 'C:\\\\Users\\\\ajoshi\\\\Downloads\\\\HCP-fMRI-NLM';\n",
+    "p_dir = 'E:\\\\HCP-fMRI-NLM';\n",
     "sub = '100307';\n",
     "s = readdfs(os.path.join(p_dir, 'reference', sub + '.aparc.a2009s.32k_fs.reduce3.very_smooth.left.dfs'));\n",
     "g.add_edges_from(s.faces[:,(0,1)]);g.add_edges_from(s.faces[:,(1,2)]);g.add_edges_from(s.faces[:,(2,0)]);\n",
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +226,9 @@
     "\n",
     "    mlab.gcf().scene.parallel_projection = True\n",
     "    mlab.view(azimuth=0, elevation=-90)\n",
-    "    mlab.savefig(filename = str(nclusters)+'labels1.png')\n",
+    "    mlab.savefig(filename = sub+str(nclusters)+'labels1.png')\n",
     "    mlab.view(azimuth=0, elevation=90)\n",
-    "    mlab.savefig(filename = str(nclusters)+'labels2.png')\n",
+    "    mlab.savefig(filename = sub+str(nclusters)+'labels2.png')\n",
     "    mlab.close();"
    ]
   },
