updates to cortical parcellation codes

--- a/main_cortical_parcellation.ipynb
+++ b/main_cortical_parcellation.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -79,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -96,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -105,8 +111,8 @@
       ]
      },
      "execution_count": 10,
-     "output_type": "execute_result",
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.covariance import GraphLassoCV\n",
@@ -141,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -166,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.fill_diagonal(rho_rho,0)"
@@ -175,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#from skimage import data, io, segmentation, color\n",
@@ -186,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -201,8 +217,8 @@
       ]
      },
      "execution_count": 13,
-     "output_type": "execute_result",
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -212,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for nclusters in [2, 5, 10, 30,200]:\n",
@@ -235,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -244,8 +264,8 @@
       ]
      },
      "execution_count": 6,
-     "output_type": "execute_result",
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -255,7 +275,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -264,8 +286,8 @@
       ]
      },
      "execution_count": 7,
-     "output_type": "execute_result",
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -275,20 +297,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -300,7 +322,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
