--- a/docs/isbi2017/ISBI2017_fmri_anand.lyx
+++ b/docs/isbi2017/ISBI2017_fmri_anand.lyx
@@ -24,8 +24,8 @@
 %
 % Single address.
 % ---------------
-\name{Anand A Joshi\thanks{Thanks to XYZ agency for funding.}}
-\address{Author Affiliation(s)}
+\name{Anand A Joshi, Gaurav Sonkar, Minqi Chong and Richard M Leahy\thanks{This project is funded by NIH R01.}}
+\address{Signal and Image Processing Institute, University of Southern California, Los Angeles}
 %
 % For example:
 % ------------
@@ -59,7 +59,7 @@
 \language english
 \language_package none
 \inputencoding auto
-\fontencoding default
+\fontencoding global
 \font_roman "default" "default"
 \font_sans "default" "default"
 \font_typewriter "default" "default"
@@ -121,20 +121,24 @@
 \begin_body
 
 \begin_layout Title
-||AUM|| Shree Ganeshaya Namaha
+Which connectivity measure is best for fMRI based cortical clustering?
 \end_layout
 
 \begin_layout Abstract
-The abstract should appear at the top of the left-hand column of text, about
- 0.5 inch (12 mm) below the title area and no more than 3.125 inches (80 mm)
- in length.
- Leave a 0.5 inch (12 mm) space between the end of the abstract and the beginning
- of the main text.
- The abstract should contain about 100 to 150 words, and should be identical
- to the abstract text submitted electronically along with the paper cover
- sheet.
- All manuscripts must be in English, printed in black ink.
- 
+Resting state fMRI (rsfMRI) provides complementary information to the sulcal
+ brain anatomy about the cytoarchitecture and function of the human brain
+ and therefore parcellation based on rsfMRI is becoming increasingly popular.
+ A number of recent papers have presented cortical parcellation methods
+ based on functional connectivity which is measured through correlation
+ of fMRI time series from a ROI or point to the rest of the brain.
+ In this paper, we present a new connectivity measure based on geodesic
+ distance on unit sphere.
+ Additionally, we compare the proposed and other connectivity measures,
+ and analyze their relationships to each other.
+ We demonstrate that the connectivity measure based on geodesic distance
+ on sphere leads to more consistent parcellation acorss and within subject.
+ This measure also shows superior performance with respect to the number
+ of samples required for parcellation.
 \end_layout
 
 \begin_layout Section
@@ -157,6 +161,120 @@ These guidelines include complete descriptions of the fonts, spacing, and
 \begin_inset CommandInset citation
 LatexCommand cite
 key "Alred03"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Materials and Methods
+\end_layout
+
+\begin_layout Standard
+We separately consider each anatomical region in the cortex and subdivide
+ them based on the resting fMRI time-series.
+ As an input, we assume preprocessed rsfMRI data from HCP that is also processed
+ using tNLM filtering.
+ First, we select an anatomical ROI for which we want subparcellation.
+ Then the mean was removed and variance normalized for each time series
+ in the data to 1.
+ If X and Y are two random variables (X and Y are vector with samples from
+ the two RVs) representing time series from two points in the brain, then
+ dot product of X and Y yields correlation between them.
+ If we consider X and Y as points on hypersphere due to unit variance, then
+ the distance between them is a true metric given by πα=π cos^(-1) (figure
+ 1) and therefore a measure of similarity can be defined as sin^(-1).
+ This similarity measure is used to compute similarity matrix between every
+ pair of nodes in the selected ROI.
+ The similarity matrix is then inputted to the spectral clustering algorithm.
+ The optimal number of clusters is selected based on Silhouette Score [1].
+ Once the parcellation is done, the color coded maps of cross subject consistenc
+y were generated.
+ Additionally, we also generated connectivity maps from centroid of each
+ cluster to the whole brain by computing correlations of time series.
+\end_layout
+
+\begin_layout Subsection
+Geodesic distance 
+\end_layout
+
+\begin_layout Standard
+Since we assume that the input time series as variance normalized to 1,
+ we can represent each of the time series as points on sphere.
+\end_layout
+
+\begin_layout Subsection
+Connectivity based distance
+\end_layout
+
+\begin_layout Subsection
+Exponential function
+\end_layout
+
+\begin_layout Subsection
+\begin_inset Formula $L^{2}$
+\end_inset
+
+ distance
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide true
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename figs/fig1.svg
+	lyxscale 30
+	width 100text%
+
+\end_inset
+
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+(a) Geodesic distance on Sphere; (b) different functions
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+We analyzed the data from HCP dataset for 100 subjects filtered using tNLM
+ [3] filtering.
+ In this paper we present the subdivision for precuneus and cingulate based
+ on functional connectivity from resting fMRI state.
+ The optimal number of cluster based on silhouette analysis shows that there
+ are 3 subdivisions of precuneus and 3 subdivisions of cingulate.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+Figure showing subdivisions
+\end_layout
 
 \end_inset
 
